# hephaestus-cli

./: .gitignore  LICENSE  README.md  README_EN.md  hephaestus-cli-base-design-doc.md  hephaestus-cli-design-doc.md  pyproject.toml
doc/commands/: attach_en.md  attach_ja.md  init_en.md  init_ja.md  kill_en.md  kill_ja.md  logs_en.md  logs_ja.md  send_en.md  send_ja.md
doc/test/: pytest_guide_en.md  pytest_guide_ja.md
src/hephaestus/: __init__.py  __main__.py  agent_communicator.py  agent_controller.py  cli.py  communication.py  config.py  dashboard.py  health_monitor.py  log_viewer.py  session_manager.py  task_distributor.py  task_manager.py
src/hephaestus/utils/: __init__.py  agent_switcher.py  file_utils.py  logger.py
templates/: config.yaml.template  task.md.template
test/: conftest.py
test/integration/: test_system_flow.py
test/unit/: test_agent_switcher.py  test_cli_attach.py  test_communication.py  test_config.py  test_file_utils.py  test_logger.py  test_session_manager.py  test_task_manager.py
