[project]
name = "hephaestus-cli"
version = "0.1.0"
description = "A tmux-based multi-agent CLI tool for managing multiple LLM agents (Master + Workers) to execute complex tasks collaboratively"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "libtmux>=0.25.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
]
authors = [
    {name = "Hephaestus-CLI Development Team"}
]
license = {text = "MIT"}
keywords = ["cli", "tmux", "multi-agent", "llm", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
hephaestus = "hephaestus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hephaestus"]
